--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=SUBBURAJT_udapython
 sonar.organization=subburajt-uda
-
+sonar.python.version=3.10
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=udapython
 #sonar.projectVersion=1.0
